@@ -1,3 +1,9 @@
+2005-08-20 Pierrick LE GALL
+
+	* improvement : dedicated page for user comments validation/reject
+	in administration. (screen is not shared with public part of the
+	gallery). Ability to validate all or reject all in one clic.
+
 2005-08-19 Pierrick LE GALL
 
 	* improvement : less compact presentation of screen
